<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/yearly_events_navigation">

    <fragment
        android:id="@+id/onetime_events_navigation"
        android:name="com.pahomovichk.remindMeDate.presentation.ui.OnetimeFragment"
        android:label="@string/onetime_events_title"
        tools:layout="@layout/ontime_events_fragment" />

    <fragment
        android:id="@+id/yearly_events_navigation"
        android:name="com.pahomovichk.remindMeDate.presentation.ui.YearlyFragment"
        android:label="@string/yearly_events_title"
        tools:layout="@layout/yearly_events_fragment" />

    <fragment
        android:id="@+id/calendar_navigation"
        android:name="com.pahomovichk.remindMeDate.presentation.ui.CalendarFragment"
        android:label="@string/calendar_title"
        tools:layout="@layout/calendar_fragment" />

    <fragment
        android:id="@+id/settings_navigation"
        android:name="com.pahomovichk.remindMeDate.presentation.ui.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/settings_fragment" />



</navigation>